@@ -2,6 +2,8 @@
 
 	* tkcon.tcl (dir): prevented possible 'divide by zero' error.
 	[Bug #496584]
+	(Expand*): fixed ExpandPathname to better handle spaced pathnames.
+	[Bug #497079]
 
 2001-12-14  Jeff Hobbs  <jeffh@ActiveState.com>
 
